@@ -14,9 +14,9 @@ function SCReadyCallback() {
 }
 
 function SCOnLoadHandler(event) {
-    var fbhandler = Components.classes["@inverse.ca/calendar/fburl-freebusy-provider;1"]
-        .getService().wrappedJSObject;
-    fbhandler.register();
+    // var fbhandler = Components.classes["@inverse.ca/calendar/fburl-freebusy-provider;1"]
+    //     .getService().wrappedJSObject;
+    // fbhandler.register();
 
     var calendar = window.arguments[0].calendar.wrappedJSObject;
     component = window.arguments[0].calendarEvent;
