@@ -40,13 +40,13 @@ const componentData =
          category: "inverse-extensions",
          categoryEntry: "volatile-addressbook-card",
          service: false},
-        {cid: Components.ID("{e88f7e4a-5756-11dd-8954-001f5be86cea}"),
-         contractid: "@inverse.ca/calendar/fburl-freebusy-provider;1",
-         script: "SOGoFBURLFreeBusyProvider.js",
-         constructor: "SOGoFBURLFreeBusyProvider",
-         category: "inverse-extensions",
-         categoryEntry: "fburl-freebusy-provider",
-         service: true},
+        // {cid: Components.ID("{e88f7e4a-5756-11dd-8954-001f5be86cea}"),
+        //  contractid: "@inverse.ca/calendar/fburl-freebusy-provider;1",
+        //  script: "SOGoFBURLFreeBusyProvider.js",
+        //  constructor: "SOGoFBURLFreeBusyProvider",
+        //  category: "inverse-extensions",
+        //  categoryEntry: "fburl-freebusy-provider",
+        //  service: true},
         {cid: Components.ID("{882c2ce0-f7a2-4894-bce7-a119fb6f3c5c}"),
          contractid: "@mozilla.org/autocompleteSession;1?type=carddav",
          script: "CardDavAutoCompleteSession.js",
